TalkRoomUrlを返すようにする
